# western-us-biomass

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: ecosection_lookup.csv  forest_group_crosswalk.csv  state_abbreviation_crosswalk.csv
nbs/0_process_inputs/: extract_canopy_cover.ipynb
nbs/0_process_inputs/plot_level_inputs/: 1_restructure_FIA_data_to_sparse_xarray.ipynb  extract_canopy_cover.ipynb
nbs/3_postprocess_output/: Compare_results.ipynb  Postprocess_gridded_output.ipynb
nbs/4_make_figures/: Figure_1_motivation_fire_trends.ipynb  Figure_1_time_series.ipynb  Figure_1a_motivation_disturbance_time_series.ipynb  Figure_2_trend.ipynb  Figure_2a_time_series.ipynb  Figure_2b_biomass_change_map.ipynb  Figure_3_disentangling_drivers.ipynb  Figure_3a_time_series.ipynb  Figure_3b_biomass_change_map.ipynb  Figure_4_drivers_map.ipynb  Figure_4_evaluation.ipynb  Figure_5.ipynb  Generate_data_for_Figure_1.ipynb  Generate_data_for_Figure_2.ipynb  Generate_data_for_Figure_3.ipynb  Generate_data_for_Figure_4.ipynb  Generate_data_for_Figure_5.ipynb  Generate_data_for_Figure_5_FRF.ipynb  figure_settings.py
nbs/4_make_figures/supplement/: Figure_S_5mod.ipynb  Figure_S_Eval_models.ipynb  Figure_S_Number_of_plots.ipynb  Figure_S_SHAP.ipynb  Figure_S_State_Timeseries.ipynb  Figure_S_percent_burned.ipynb  Figure_S_tree_mortality.ipynb  Generate_data_for_Figure_S_CA_zoom_and_unburned_delta.ipynb  Generate_data_for_Figure_S_Eval_models.ipynb  Generate_data_for_Figure_S_Number_of_plots.ipynb  Generate_data_for_Figure_S_SHAP.ipynb  Generate_data_for_Figure_S_forest_mortality.ipynb  Generate_data_for_Figure_S_percent_burned.ipynb
src/conus_biomass/: dir_info.py  settings.py  unit_conversion.py
src/conus_biomass/make_figures/: maps.py  plot_model_evaluation.py
src/conus_biomass/process_inputs/: bin_nfi_plots.py  load_fia.py  load_prism.py  process_canopy_cover.py  restructure_NFI_data.py
src/conus_biomass/process_outputs/: generate_state_csv.py  generate_state_csv.sh  postprocess_output.py
src/conus_biomass/run_model/: run_model_spatially.py  submit_all_tiles.sh  submit_all_tiles_ensemble.sh  submit_one_tile.sh  submit_one_tile_ensemble.sh
src/conus_biomass/train_models/: submit_training_jobs.sh  train_all_models.py  train_ensemble.py  train_model_delta_burned.py  train_model_delta_unburned.py  train_model_init_biomass.py  train_models_utils.py
src/western_us_biomass/: dir_info.py  settings.py
src/western_us_biomass/make_figures/: maps.py  plot_model_evaluation.py
src/western_us_biomass/process_inputs/: bin_nfi_plots.py  extract_points_from_rasters.py  load_fia.py  load_prism.py  process_canopy_cover.py  restructure_NFI_data.py
src/western_us_biomass/process_outputs/: generate_state_csv.py  generate_state_csv.sh  (+3 more)
(+15 files in other folders)
