[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "conus-biomass"
description = "CarbonPlan Python project template"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CarbonPlan", email = "tech@carbonplan.org"}]
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[project.urls]
repository = "https://github.com/carbonplan/conus-biomass"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "node-and-date"
fallback_version = "999"

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
builtins = ["ellipsis"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
lint.per-file-ignores = {}
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
lint.ignore = [
    "E402",
    "E501",
    "E731",
]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
known-first-party = ["conus-biomass"]

[tool.pytest.ini_options]
console_output_style = "count"
addopts = "--cov=./ --cov-report=xml --verbose"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-aarch64", "linux-64"]

[tool.pixi.pypi-dependencies]
conus-biomass = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
xarray = ">=2025.6.0,<2026"
numpy = ">=2.2.6,<3"
joblib = ">=1.5.2,<2"
pyproj = ">=3.7.2,<4"
pandas = ">=2.3.2,<3"
scikit-learn = ">=1.7.2,<2"
geopandas = ">=1.1.1,<2"
dask = ">=2025.7.0,<2026"
rasterio = ">=1.4.3,<2"
rioxarray = ">=0.19.0,<0.20"
matplotlib = ">=3.10.6,<4"
shap = ">=0.48.0,<0.49"
xgboost = ">=3.0.5,<4"
cartopy = ">=0.25.0,<0.26"
jupyterlab = ">=4.4.7,<5"
ipykernel = ">=6.30.1,<7"
netcdf4 = ">=1.7.4,<2"
h5netcdf = ">=1.7.3,<2"
shapely = ">=2.1.2,<3"
seaborn = ">=0.13.2,<0.14"
zarr = "==2.18.3"
rasterstats = ">=0.20.0,<0.21"
s3fs = ">=2026.1.0,<2027"
odc-geo = ">=0.5.0,<0.6"
pint = ">=0.25.2,<0.26"
numcodecs = "==0.15.1"
blosc = "==1.21.6"
pre-commit = ">=4.5.1,<5"

[tool.pixi.feature.dev.dependencies]
black = "*"
pixi-pycharm = "*"

[tool.pixi.environments]
dev = ["dev"]
